1999-11-02  Elliot Lee  <sopwith@redhat.com>

	* src/htmlimage.c: Fix computation of clipping coordinates.
	* src/htmlpainter.c: Unset the clipping region after drawing a pixmap.

1999-11-02 Elliot
	* Make a changelog entry because I have to.

1999-10-30    <jrb@redhat.com>

	* DESIGN: Added as per andersca's request.

1999-10-30  Michael Meeks  <mmeeks@gnu.org>

	* configure.in: Update bonobo check.
