@@ -3,71 +3,77 @@ INCLUDES = -I$(top_srcdir) -I$(srcdir) -I$(includedir) $(GNOME_INCLUDEDIR) \
 	-DG_LOG_DOMAIN=\"gtkhtml\" $(LIBWWW_CFLAGS) \
 	-DSRCDIR=\"$(srcdir)\"
 
+lib_LTLIBRARIES = libgtkhtml.la
+
 noinst_PROGRAMS = testgtkhtml
 
 if BONOBO
 bin_PROGRAMS = html-component
 endif
 
-common_SOURCES =   \
-	debug.c		\
-	debug.h		\
-	gtkhtml.c       \
-	gtkhtml.h	\
-	htmlbullet.c	\
-	htmlbullet.h	\
-	htmlclue.c	\
-	htmlcluealigned.c	\
-	htmlcluealigned.h	\
-	htmlclueflow.c	\
-	htmlclueflow.h	\
-	htmlclue.h	\
-	htmlclueh.c	\
-	htmlclueh.h	\
-	htmlcluev.c	\
-	htmlcluev.h	\
-	htmlcolor.c	\
-	htmlcolor.h	\
-	htmlengine.c	\
-	htmlengine.h	\
-	htmlfont.c	\
-	htmlfont.h	\
-	htmlhspace.c	\
-	htmlhspace.h	\
-	htmlimage.c     \
-	htmlimage.h	\
-	htmllist.c      \
-	htmllist.h      \
-	htmlobject.c	\
-	htmlobject.h	\
-	htmlpainter.c	\
-	htmlpainter.h	\
-	htmlrule.c	\
-	htmlrule.h	\
-	htmlsettings.c	\
-	htmlsettings.h	\
-	htmlstack.c	\
-	htmlstack.h	\
-	htmlstream.c	\
-	htmltable.c	\
-	htmltable.h	\
-	htmltablecell.c	\
-	htmltablecell.h	\
-	htmltext.c	\
-	htmltext.h	\
-	htmltextmaster.c\
-	htmltextmaster.h\
-	htmltextslave.c	\
-	htmltextslave.h	\
-	htmltokenizer.c	\
-	htmltokenizer.h	\
-	htmlvspace.c	\
-	htmlvspace.h	\
-	stringtokenizer.c	\
+libgtkhtmldir = $(includedir)/gtkhtml
+
+libgtkhtml_HEADERS =				\
+	debug.h					\
+	gtkhtml.h				\
+	htmlbullet.h				\
+	htmlcluealigned.h			\
+	htmlclueflow.h				\
+	htmlclue.h				\
+	htmlclueh.h				\
+	htmlcluev.h				\
+	htmlcolor.h				\
+	htmlengine.h				\
+	htmlfont.h				\
+	htmlhspace.h				\
+	htmlimage.h				\
+	htmllist.h				\
+	htmlobject.h				\
+	htmlpainter.h				\
+	htmlrule.h				\
+	htmlsettings.h				\
+	htmlstack.h				\
+	htmltable.h				\
+	htmltablecell.h				\
+	htmltext.h				\
+	htmltextmaster.c			\
+	htmltextmaster.h			\
+	htmltextslave.h				\
+	htmltokenizer.h				\
+	htmlvspace.h				\
 	stringtokenizer.h
 
+libgtkhtml_la_SOURCES =				\
+	debug.c					\
+	gtkhtml.c				\
+	htmlbullet.c				\
+	htmlclue.c				\
+	htmlcluealigned.c			\
+	htmlclueflow.c				\
+	htmlclueh.c				\
+	htmlcluev.c				\
+	htmlcolor.c				\
+	htmlengine.c				\
+	htmlfont.c				\
+	htmlhspace.c				\
+	htmlimage.c				\
+	htmllist.c				\
+	htmlobject.c				\
+	htmlpainter.c				\
+	htmlrule.c				\
+	htmlsettings.c				\
+	htmlstack.c				\
+	htmlstream.c				\
+	htmltable.c				\
+	htmltablecell.c				\
+	htmltext.c				\
+	htmltextmaster.c			\
+	htmltextslave.c				\
+	htmltokenizer.c				\
+	htmlvspace.c				\
+	stringtokenizer.c
+
 testgtkhtml_SOURCES = 		\
-	$(common_SOURCES) 	\
 	testgtkhtml.c
 
 if LIBWWW
@@ -76,21 +82,24 @@ else
 GLIBWWW=
 endif
 
-testgtkhtml_LDADD = 		\
-	$(GLIBWWW)		\
-	$(GNOMEUI_LIBS) 	\
-	$(GNOME_LIBDIR) 	\
+testgtkhtml_LDADD =				\
+	libgtkhtml.la				\
+	$(GLIBWWW)				\
+	$(GNOMEUI_LIBS)				\
+	$(GNOME_LIBDIR)				\
 	$(EXTRA_GNOME_LIBS)
 
 if BONOBO
-html_component_SOURCES = \
-	$(common_SOURCES) 	\
+
+html_component_SOURCES =			\
 	html-component.c
 
-html_component_LDADD = 		\
-	$(GNOMEUI_LIBS) 	\
-	$(GNOME_LIBDIR) 	\
+html_component_LDADD =				\
+	libgtkhtml.la				\
+	$(GNOMEUI_LIBS)				\
+	$(GNOME_LIBDIR)				\
 	$(EXTRA_GNOME_LIBS)
+
 endif
 
 dist-hook:
