@@ -1,3 +1,7 @@
+1999-11-10  Ettore Perazzoli  <ettore@gnu.org>
+
+	* configure.in: Make `--with-bonobo' really work.
+
 1999-11-02  Elliot Lee  <sopwith@redhat.com>
 
 	* src/htmlimage.c: Fix computation of clipping coordinates.
